<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016 Kyriakos Alexandrou (Kiki)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen_container"
    style="@style/ScreenContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/is_bt_classic_supported_label"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        tools:background="@android:color/holo_green_dark"
        tools:text="@string/label_bt_classic_mode_supported" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/primary_dark" />

    <TextView
        android:id="@+id/is_central_supported_label"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        tools:background="@android:color/holo_green_dark"
        tools:text="@string/label_central_mode_supported" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/primary_dark" />

    <TextView
        android:id="@+id/is_peripheral_supported_label"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        tools:background="@android:color/holo_red_dark"
        tools:text="@string/label_peripheral_mode_not_supported" />

    <!--
        <LinearLayout
            android:id="@+id/bt_classic_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/central_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/peripheral_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ad_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    -->
</LinearLayout>